# ChangeLog for app-emulation/libvirt
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.86 2011/01/20 20:42:27 cardoe Exp $

  20 Jan 2011; Doug Goldstein <cardoe@gentoo.org> libvirt-0.8.7.ebuild:
  Update elog message about optional depends for bug #351374

  07 Jan 2011; Lars Wendler <polynomial-c@gentoo.org> libvirt-0.8.5-r2.ebuild,
  libvirt-0.8.6-r1.ebuild, libvirt-0.8.7.ebuild:
  app-emulation/virtualbox-ose was pkgmoved to app-emulation/virtualbox.

  06 Jan 2011; Tiziano Müller <dev-zero@gentoo.org> +libvirt-0.8.5-r2.ebuild:
  Resurrect libvirt-0.8.5-r2 (without keywords) for php-libvirt.

*libvirt-0.8.7 (06 Jan 2011)

  06 Jan 2011; Diego E. Pettenò <flameeyes@gentoo.org> +libvirt-0.8.7.ebuild:
  Version bump; add a workaround for tests failing with sandbox enabled.

*libvirt-0.8.6-r1 (13 Dec 2010)

  13 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -libvirt-0.8.5-r2.ebuild, -libvirt-0.8.6.ebuild, +libvirt-0.8.6-r1.ebuild:
  Fix build with USE=pcap; thanks to Alexander E. Patrakov in bug #348489 for
  reporting.

*libvirt-0.8.6 (01 Dec 2010)

  01 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -libvirt-0.8.5-r1.ebuild, +libvirt-0.8.6.ebuild:
  Version bump, backports from day one, since the release is broken upstream.

*libvirt-0.8.5-r2 (09 Nov 2010)

  09 Nov 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -libvirt-0.8.4.ebuild, +libvirt-0.8.5-r2.ebuild:
  Cleanup old version; add new revbump that disables the xen-proxy in all
  cases, since upstream deprecated it and won't be in the next version
  anyway.

*libvirt-0.8.5-r1 (30 Oct 2010)

  30 Oct 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -libvirt-0.8.5.ebuild, +libvirt-0.8.5-r1.ebuild:
  Bump backports with a patch of mine to fix bug #329427 (USB devices can't
  be accessed with enabled cgroup), and one (fixed) from Eric Blake to fix