@@ -7,6 +7,6 @@ DIST libvirt-0.8.6.tar.gz 13296407 RMD160 a65add6ed9b00e2f065f9e791a02b61e851aa7
 DIST libvirt-0.8.7.tar.gz 13713267 RMD160 20a0651aee1bb35fbb69f3218ca96e92a2323446 SHA1 53b10513cb04c502a2c8aaf57039c71f0f79ea6f SHA256 da7b0e8bff7b2df2e19d732272674599bfb805787fb0d6f30289ba700ca77f31
 EBUILD libvirt-0.8.5-r2.ebuild 7273 RMD160 9a2fc6602e26f991e943a91410415f25f241e1ca SHA1 aa1ffcf3af784b74bee792e79bc6c239e7513e16 SHA256 9914b606f025bd17198b68f6fda0481752afd4bff1351cd662c981e67a290c1e
 EBUILD libvirt-0.8.6-r1.ebuild 7333 RMD160 460ade61ea19b8f3cdeec00d6706c1bba77ae5a9 SHA1 785f4e457f2db9578236baef7ef4f0b7523fdba6 SHA256 c7f08ccf9f8398a8e29b88bf0bbb65a171aa827afb5eb96041cc64a8fb495eec
-EBUILD libvirt-0.8.7.ebuild 7759 RMD160 246f49fe74470c205e54d8c815548c74ec3880a4 SHA1 de213f65c7b92a29c885537c9a6fb1b1d1aa8edb SHA256 acfb6a640ea901ae311e0c842d80eec250eee6ea7d09f2ee7138eb902d307786
-MISC ChangeLog 19648 RMD160 75382cfd9e65cfd270c42bb33ff21279bfcf0c86 SHA1 efb88d292a6654a5d27f27b7e53086c3845cccac SHA256 001abba02fdec813676192399551a358dc7a18fb5eb5ce9214dedbe3b047be29
-MISC metadata.xml 2742 RMD160 82f7154f8af2898a702961d59ebeec81d9aa4fe2 SHA1 cc28fad9c602f6f73ab157d531b55d9876703a45 SHA256 4c3e2fb4fd6fcedb22d73992431f16dff0728ce9e608011b01c182e6654ccd46
+EBUILD libvirt-0.8.7.ebuild 7764 RMD160 76b683f66e7c4b515428f5c8b15c1e7b396dbe9d SHA1 7d0ffe8fca3d197f1bbd699671a77bb155bf28bb SHA256 c42e68ed36afcd411886f54e07310546b9bce318d3d1f88db5f1f1a45f9a870e
+MISC ChangeLog 19892 RMD160 eb00589ca3d2775400400aae520d019448d8e6ec SHA1 0ed4b77d758ce06e7033edf3e2f98001ad2e2237 SHA256 f64429ad1f81a0230076eb604e3c956e54585ee2f6d50f8a3f3fc2557be2c8d8
+MISC metadata.xml 3026 RMD160 c45bdcd924b283330b1211abc505e106f2ceb2b1 SHA1 ca4308eec5a3e7c6419a24f9ca06fdea64ccec8e SHA256 7f7722b3a05787803ae3bda78ceccbc1c48a8d53d80f98a7a1327e988fe9ea41
