@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.86 2011/01/20 20:42:27 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.87 2011/01/21 16:27:15 cardoe Exp $
+
+  21 Jan 2011; Doug Goldstein <cardoe@gentoo.org> libvirt-0.8.7.ebuild,
+  metadata.xml:
+  Add a USE flag called 'virt-network' that pulls in the depends for NATed
+  networks. This should make it easier for people to install and setup libvirt.
 
   20 Jan 2011; Doug Goldstein <cardoe@gentoo.org> libvirt-0.8.7.ebuild:
   Update elog message about optional depends for bug #351374
